fix overflow on popout shade

--- a/SonicParadox.Cms/assets/scss/sp-custom/components/_staff.scss
+++ b/SonicParadox.Cms/assets/scss/sp-custom/components/_staff.scss
@@ -26,11 +26,11 @@ $staff-spacing: 12px;
     }
 
     & > .staff__dimmer {
-        position: absolute;
+        position: fixed;
         top: 0;
         left: 0;
-        width: 100vw;
-        height: 100vh;
+        width: 100%;
+        height: 100%;
         background-color: transparentize(black, 0.4);
         display: flex;
         transition: opacity 0.2s ease;
